release: 升级至 1.6.0 — 修复并发与解析缺陷、解耦 JDK 内部 API、新增单元测试
修复:
- vulscan: `== "POST"` 改为 equals,POST→GET 转换恢复生效
- 重构 vulscan 线程池生命周期:私有池 + Future.get(30s) 超时取消 + finally shutdown,消除池反复重建导致的线程泄漏;移除多处共享 ThreadPool 赋值
- threads: 共享 heads 改为每线程拷贝,修复多线程就地修改的数据竞争
- history_url 改 ConcurrentHashMap.newKeySet() 并加 50000 上限,防 OOM
- AnalysisHeaders / ProceHead 防御无冒号、无空格 header,不再 substring 崩溃
- MergerUpdateYamlFunc 消除循环内重复读文件 (O(n²) → 单次读写)
- 清理死代码与 new Integer 废弃 API

变更:
- threads 由 com.sun.jmx.snmp.tasks.Task 改为 Runnable,移除 68MB lib/rt.jar,可在 JDK 21 编译

构建:
- shadow 5.2.0 → com.gradleup.shadow 8.3.1,compile → implementation
- JUnit 5.7 → 5.10.2 + platform-launcher,兼容 Gradle 9 / JDK 21

测试:
- 新增 8 个 JUnit5 测试类,49 例全绿

文档:
- 新增 CHANGELOG.md;README 更新计划补充 1.6.0

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>